Criação da segunda página

--- a/index.html
+++ b/index.html
@@ -4,12 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/index/index.css">
+    <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
     <title>Jogo de Cartas</title>
 </head>
 <body>
     <audio autoplay="autoplay">
-        <source src="songs/alice-in-dark-wonderland-123894.mp3" type="audio/mp3">
+        <source src="assets/songs/alice-in-dark-wonderland-123894.mp3" type="audio/mp3">
         seu navegador não suporta HTML5
-  </audio>
+    </audio>
+    
+    <section>
+        <div class="intro">
+            <h1>Bem Vindo(a)!</h1>
+            <br>
+            <h3>Preencha o campo abaixo <br>
+            para continuar.
+            </h3>
+        </div>
+
+        <form action="pag2.html" method="">  
+            <div class="input">
+                <input type = "text" name="nome" id="nome" required placeholder="Insira seu nome aqui" 
+                value="">
+                <button type="submit" name="acao" id="acao" value="continua">Continuar</button>
+            </div>
+        </form>
+    </section>
+    <script src="assets/script/script.js"></script>
 </body>
 </html>
