Implementação do sorteio e soma de cartas do jogador, ajustes nas páginas

--- a/index.html
+++ b/index.html
@@ -8,11 +8,6 @@
     <title>Jogo de Cartas</title>
 </head>
 <body>
-    <audio autoplay="autoplay">
-        <source src="assets/songs/alice-in-dark-wonderland-123894.mp3" type="audio/mp3">
-        seu navegador não suporta HTML5
-    </audio>
-    
     <section>
         <div class="intro">
             <h1>Bem Vindo(a)!</h1>
@@ -26,7 +21,7 @@
             <div class="input">
                 <input type = "text" name="nome" id="nome" required placeholder="Insira seu nome aqui" 
                 value="">
-                <button type="submit" name="acao" id="acao" value="continua">Continuar</button>
+                <button type="submit" name="acao" id="acao" value="continua" onclick="continuar()">Continuar</button>
             </div>
         </form>
     </section>
